# QuantFlow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  getting-started.md
examples/: CMakeLists.txt  complete_backtest.cpp  mean_reversion_strategy.cpp  simple_sma_strategy.cpp
include/quantflow/backtest/: backtest_engine.hpp  performance_analyzer.hpp
include/quantflow/core/: time.hpp  types.hpp
include/quantflow/data/: csv_reader.hpp  timeseries_db.hpp
include/quantflow/execution/: order_manager.hpp
include/quantflow/indicators/: indicator_base.hpp  momentum.hpp  moving_average.hpp  trend.hpp  volatility.hpp
include/quantflow/market_data/: feed_interface.hpp  historical_feed.hpp
include/quantflow/portfolio/: portfolio_manager.hpp
include/quantflow/risk/: risk_manager.hpp
include/quantflow/strategy/: strategy_base.hpp
include/quantflow/utils/: lockfree_queue.hpp  logger.hpp
scripts/: generate_sample_data.py
src/: main.cpp
src/backtest/: backtest_engine.cpp  performance_analyzer.cpp
src/core/: time.cpp
src/data/: timeseries_db.cpp
src/execution/: order_manager.cpp
src/market_data/: historical_feed.cpp
